--- a/DBSL_ProposalGenerator/.settings/org.eclipse.wst.common.component
+++ b/DBSL_ProposalGenerator/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="context-root" value="DBSL_ProposalGenerator"/>
         <property name="java-output-path" value="/DBSL_ProposalGenerator/build/classes"/>
     </wb-module>
